[gd_scene load_steps=2 format=3 uid="uid://c3b8k7m4n5o6p"]

[ext_resource type="Script" path="res://EvolutionMenu.gd" id="1_evolution"]

[node name="EvolutionMenu" type="CanvasLayer"]
process_mode = 3
layer = 100
script = ExtResource("1_evolution")

[node name="FullScreenControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="Panel" type="ColorRect" parent="FullScreenControl"]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)
mouse_filter = 0

[node name="TitleLabel" type="Label" parent="FullScreenControl"]
process_mode = 3
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 80.0
offset_bottom = 160.0
grow_horizontal = 2
text = "WEAPON EVOLUTION AVAILABLE!"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="FullScreenControl"]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonContainer" type="VBoxContainer" parent="FullScreenControl/CenterContainer"]
process_mode = 3
layout_mode = 2
theme_override_constants/separation = 20
